Remove IDE files

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
-.idea/
+# IntelliJ IDE
+.idea/*/
+.idea/*.*
+!.idea/codeStyles
+!.idea/.name
+!.idea/libraries
+!.idea/jsLibraryMappings.xml
+!.idea/misc.xml
+!.idea/modules.xml
+!.idea/typescript-compiler.xml
+!.idea/php.xml
+!.idea/*.iml
+!.idea/vcs.xml
