--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,3 @@
 # IntelliJ IDE
 .idea/*/
-.idea/*.*
-!.idea/codeStyles
-!.idea/.name
-!.idea/libraries
-!.idea/jsLibraryMappings.xml
-!.idea/misc.xml
-!.idea/modules.xml
-!.idea/typescript-compiler.xml
-!.idea/php.xml
-!.idea/*.iml
-!.idea/vcs.xml
+.idea/*
