--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "css-flat",
+  "name": "@solid-js/css-flat",
   "version": "1.0.1",
   "description": "Clean CSS-flat file written in pure CSS.",
   "main": "css-flat.css",
